# nexus-panel

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.frontend  Dockerfile.panel  LICENSE  README.md  docker-compose.yml  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  contributing.md  egg-development.md  getting-started.md  wings-configuration.md
scripts/: install-panel.sh  install-wings.sh  nexus-wings.service
wings/: Cargo.toml  Dockerfile  Makefile  build.rs  config.example.toml
wings/contrib/: nexus-wings.service
wings/src/: auth.rs  config.rs  console.rs  docker.rs  error.rs  files.rs  grpc.rs  heartbeat.rs  installer.rs  main.rs  server.rs  state.rs
wings/src/routes/: files.rs  mod.rs  servers.rs  system.rs  ws.rs
