[package]
name = "nexus-wings"
version = "0.1.0"
edition = "2021"
description = "Nexus Wings — Server daemon for Nexus Panel"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
zip = "2"
flate2 = "1"
tar = "0.4"
walkdir = "2"
mime_guess = "2"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
nix = { version = "0.29", features = ["fs"] }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6"

[build-dependencies]
tonic-build = "0.13"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
